# templates

./: README.md  flake.nix
rust-simple/: Cargo.toml  README.md  flake.nix
rust-simple/hello-rs/: Cargo.toml
